<?xml version="1.0" encoding="utf-8"?>
<resources>
<!--  -->
    <string name="app_name">WAll Around Me</string>
    <string name="action_settings">Préférences</string>
    <string name="title_activity_preference">Préférences</string>
    <string name="title_activity_message">Message</string>
    <string name="title_activity_my_preference">Préférences</string>
    <!--  -->
    <string name="text_empty_view">Aucun message à afficher</string>
    <string name="text_button_next">Suivant</string>
    <string name="text_button_previous">Précédent</string>
    <string name="text_empty_pages_info">Page -/-</string>
    <!--  -->
     <string name="action_bar_settings">Préférences</string>
      <string name="action_bar_refresh">Rafraîchir</string>
       <string name="action_bar_new_message">Nouveau Message</string>
    

    <!-- Preference's labels -->
    <string name="pagination_preference_title">Pagination</string>
    <string name="pagination_preference_summary">Active la pagination sur le mur.</string>
    <string name="gender_preference_title">Sexe</string>

    <string-array name="gender_list_key">
        <item>Femme</item>
        <item>Homme</item>
    </string-array>
    <string-array name="gender_list_value">
        <item>0</item>
        <item>1</item>
    </string-array>

    <string name="radius_preference_title">Rayon</string>
    <string name="radius_preference_summary">Rayon dans lesquels vous souhaitez voir les messages.</string>

</resources>