<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:example="fr.uppa.waam.util.seekbarpreference" >

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="pagination_preference"
        android:summary="@string/pagination_preference_summary"
        android:title="@string/pagination_preference_title" />

    <ListPreference
        android:defaultValue="0"
        android:entries="@array/gender_list_key"
        android:entryValues="@array/gender_list_value"
        android:key="gender_preference"
        android:summary="%s"
        android:title="@string/gender_preference_title" />

    <fr.uppa.waam.util.SeekBarPreference
        android:key="radius_preference"
	    android:title="Rayon des messages"
	    android:dialogTitle="Rayon"
	    android:summary="%1$d"
	    android:persistent="true"
	    android:defaultValue="250"
	    example:minValue="50"
	    example:maxValue="500" />
    
</PreferenceScreen>