<ViewFlipper xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/viewFlipper"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/nonPaginatedView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="fr.uppa.waam.views.WallActivity" >

        <ListView
            android:id="@+id/messages"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/empty"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha=".54"
            android:gravity="center"
            android:text="@string/text_empty_view"
            android:textSize="@dimen/title" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/paginatedView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/pagesInformation"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#333333"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/text_empty_pages_info"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <ListView
            android:id="@+id/messagesPaginated"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/emptyPaginated"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha=".54"
            android:gravity="center"
            android:text="@string/text_empty_view"
            android:textSize="@dimen/title" />

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/previous"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_button_previous" />

            <Button
                android:id="@+id/next"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_button_next" />
        </LinearLayout>
    </LinearLayout>

</ViewFlipper>